@@ -340,6 +340,11 @@ my @Tests = (
 			  cmd     => "./clock5",
 			  checker => \&check_clock5,
 			 },
+			 # Test of the clocked channel's skew feature.
+			 {
+			  cmd     => "./clock6",
+			  checker => \&check_clock6,
+			 },
 			 # Simple test of the quantity class.
 			 {
 			  cmd     => "./quantity1",
@@ -1111,35 +1116,6 @@ sub check_clock2 {
   check_clocked_channel (@_[0],"Got a value from port c(\\d+) at time (\\d+):\\s+(\\d+)",\@data,5,6);
 }
 
-sub check_clock5 {
-  str_rdiff(@_[0],<<'EOD');
-stage 1:  Producing at time 0:  1
-stage 1:  Producing at time 0:  2
-stage 1:  Producing at time 10:  3
-stage 1:  Producing at time 20:  4
-stage 1:  Producing at time 30:  -1
-stage 1:  Done.
-EOD
-
-  str_rdiff(@_[0],<<'EOD');
-stage 2:  Got from port c1 at time 10:  1
-stage 2:  Got from port c1 at time 20:  2
-stage 2:  Got from port c1 at time 30:  3
-stage 2:  Got from port c1 at time 40:  4
-stage 2:  Got from port c1 at time 50:  -1
-stage 2:  Done.
-EOD
-
-  str_rdiff(@_[0],<<'EOD');
-stage 3:  Got from port c2 at time 15:  1
-stage 3:  Got from port c2 at time 25:  2
-stage 3:  Got from port c2 at time 35:  3
-stage 3:  Got from port c2 at time 45:  4
-stage 3:  Got from port c2 at time 55:  -1
-stage 3:  Done.
-EOD
-}
-
 sub check_clock3 {
   # We check that each pipeline stage emits the expected data at the right time.
 
@@ -1232,6 +1208,43 @@ EOD
 EOD
 
 }
+
+sub check_clock5 {
+  str_rdiff(@_[0],<<'EOD');
+stage 1:  Producing at time 0:  1
+stage 1:  Producing at time 0:  2
+stage 1:  Producing at time 10:  3
+stage 1:  Producing at time 20:  4
+stage 1:  Producing at time 30:  -1
+stage 1:  Done.
+EOD
+
+  str_rdiff(@_[0],<<'EOD');
+stage 2:  Got from port c1 at time 10:  1
+stage 2:  Got from port c1 at time 20:  2
+stage 2:  Got from port c1 at time 30:  3
+stage 2:  Got from port c1 at time 40:  4
+stage 2:  Got from port c1 at time 50:  -1
+stage 2:  Done.
+EOD
+
+  str_rdiff(@_[0],<<'EOD');
+stage 3:  Got from port c2 at time 15:  1
+stage 3:  Got from port c2 at time 25:  2
+stage 3:  Got from port c2 at time 35:  3
+stage 3:  Got from port c2 at time 45:  4
+stage 3:  Got from port c2 at time 55:  -1
+stage 3:  Done.
+EOD
+}
+
+sub check_clock6 {
+  str_rdiff(@_[0],<<'EOD');
+consumer:  Got from port c0 at time 5:  1
+consumer:  Got from port c0 at time 15:  2
+EOD
+}
+
 
 sub check_quantity1 {
   str_rdiff(@_[0],<<'EOD');
